package calabozos

class Calabozo {

}
