package calabozos

class Habitacion {

}
